--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
       <version>2.11.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.4.21.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
