--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
         max_attempts: 3
         window: 30s
     environment:
-      - DB_CONNECTION_URL=jdbc:postgresql://localhost:5432/java_kit_db
+      - DB_CONNECTION_URL=jdbc:postgresql://java_kit_db:5432/java_kit_db
       - DB_USERNAME=java_kit
       - DB_PASSWORD=java_kit
     depends_on:
